[#53420683] Fix some text, better screenshots. Implements overflow fix.

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -113,6 +113,7 @@ section#info-content {padding-top: 25px; background: url("../images/global/sep.p
 }
 
 section#knowledge-content {
+    overflow: visible;
 	#knowledge-hp-block {margin-top: 20px;
 		h4 {color: $secondaryColor; border-bottom: 5px solid $lightGrey; margin-bottom: 0;
 			a {font-size: ms(0); line-height: 30px;}
